# biped

./: .dockerignore  .env.example  .eslintrc.json  .flake8  .gitignore  AGENT.md  API_DOCUMENTATION.md  ARCHITECTURE_UX_AUDIT_IMPLEMENTATION.md  BUSINESS_DOCUMENTATION_IMPLEMENTATION.md  COMPETITOR_RESEARCH.md  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_DEPLOYMENT_ANALYSIS.md  CRITICAL_REVIEW_FINAL.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  DEVELOPER_GUIDE.md  Dockerfile  EVIDENCE_COLLECTION.json  EVIDENCE_COLLECTION_REPORT.md  IMMEDIATE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  ISSUE_6_RESOLUTION_SUMMARY.md  MARKET_DOMINATION_STRATEGY.md  Makefile  PERFORMANCE_BENCHMARK_REPORT.md  PERFORMANCE_BENCHMARK_RESULTS.json  Procfile  QUALITY_ACHIEVEMENT_REPORT.md  QUALITY_IMPROVEMENTS.md  QUALITY_STANDARDS.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_SETUP.md  RAILWAY_VARIABLES_TEMPLATE.md  RAILWAY_VOLUME_SETUP.md  README.md  REVOLUTIONARY_FEATURES_COMPLETE.md  SYSTEMATIC_VERIFICATION_ANALYSIS.md  SYSTEMATIC_VERIFICATION_REPORT.md  VERIFICATION_RESULTS.json  (+20 more)
audit-reports/: Makefile-backup  bandit-security-analysis.json  bandit-security-analysis.txt  command-injection-patterns.txt  comprehensive-audit-report-20250705-082707.md  configuration-security.txt  dangerous-html-patterns.txt  docker-security-analysis.txt  environment-assessment.txt  environment-security.txt  flake8-backup.ini  frontend-dependency-security.json  hardcoded-passwords.txt  hardcoded-secrets.txt  hardcoded-tokens.txt  hardcoded-urls.txt  js-security-patterns.txt  npm-security-audit.json  (+9 more)
(+233 files in other folders)
